Task: Agrego estilos y texto a los templates header, resultado-cliente, también modificio el archivo css
Resposanble: Gabriel Alejandro Mamani

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -41,7 +41,7 @@
 			    <a class="nav-link dropdown-toggle h5 text-dark" data-toggle="dropdown" href="/cliente" role="button" aria-haspopup="true" aria-expanded="false">Cliente</a>
 			    <div class="dropdown-menu">
 			      <a class="dropdown-item" href="/cliente">Nuevo cliente</a>
-			      <a class="dropdown-item" href="/cliente-cuentas">Cuentas</a>
+			      <a class="dropdown-item" href="/cliente-cuentas">Cuentas y beneficios</a>
 			      <a class="dropdown-item" href="/cliente-listado">Información</a>			      
 			    </div>
 			  </li>
