--- a/src/main/resources/templates/resultado-cliente.html
+++ b/src/main/resources/templates/resultado-cliente.html
@@ -17,7 +17,7 @@
 		<div class="row my-3">
 			<div class="col-12 col-sm-12 col-md-8 mb-3">
 			    <h1 class="h1">El cliente fue guardado con éxito <i class="fas fa-check text-success"></i></h1>			    
-			    <a class="btn btn-primary" role="button" href="/cliente-cuentas">Ver cuentas de clientes </a>
+			    <a class="btn btn-primary" role="button" href="/cliente-cuentas">Ver cuentas de clientes y beneficios</a>
 			    <a class="btn btn-primary" role="button" href="/cliente-listado">Ver listado con información personal</a>			
 			</div>
 			<div th:replace="layouts/aside :: aside" ></div>
